--- a/2pagina.html
+++ b/2pagina.html
@@ -37,7 +37,7 @@
 <table class="grafico">
 <tr>
 <td colspan="5">
-<h2>Preferência humana (Fonte: Fúncionários da Cabostore)</h2>
+<h2>Preferência humana (Fonte: Funcionários da Cabostore)</h2>
 </td>
 </tr>
 <tr>
